# cuda_ss14

./: .gitignore
basic/: addArrays.cu  squareArray.cu
basic/.svn/: all-wcprops  entries
basic/.svn/text-base/: addArrays.cu.svn-base  squareArray.cu.svn-base
day1/: Makefile  imageThresholding.cu  squareArray.cu
day1/ex2/: addArrays.cu  squareArray.cu
day1/ex3/: main.cu
day1/ex4/: main.cu
day1/ex5/: main.cu
day1/ex6/: main.cu  main2.cu
day1/ex7/: main.cu
day1/ex7_bonus/: main.cu~
exercises/: CMakeLists.txt  Makefile  aux.cu  aux.h  common_kernels.cu  common_kernels.cuh  common_kernels.h  ex1.txt  ex12-3.txt  ex2.txt  helper.cu  helper.h  opencv_helpers.cpp  opencv_helpers.h
exercises/common/include/: common_kernels.cuh  opencv_helpers.h
exercises/common/src/: opencv_helpers.cpp
exercises/ex11/: main.cu
exercises/ex12/: main.cu
exercises/ex13_bonus/: main.cu  main_dennis.cu  test.cu
exercises/ex14/: #main.cu#  .#main.cu  main.cu
exercises/ex15/: main.cu
exercises/ex16/: main.cu
exercises/ex2/: addArrays.cu  squareArray.cu
exercises/ex3/: main.cu
exercises/ex4/: main.cu  main_all.cu
exercises/ex5/: main.cu
exercises/ex6/: main.cu
exercises/ex7/: convolution_timing.cu  main.cu  main_adrian.cu  main_markus.cu  main_tex.cu
exercises/ex7_bonus/: main.cu
exercises/ex8/: main.cu
exercises/ex9/: main.cu
framework-d1e3/: main
framework/.svn/: all-wcprops  entries
framework/.svn/text-base/: main.cu.svn-base
images/.svn/: all-wcprops  entries
pdf/: debug.txt
